# libyuvdemo-android

./: local.properties
app/: build.gradle
app/src/androidTest/java/com/example/libyuv/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/libyuv/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/libyuv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
